--- a/index.html
+++ b/index.html
@@ -19,63 +19,71 @@
                 </div>
                 <div class="navigation">
                     <ul class="nav-items">
-                        <li>
+                        <li class="nav-links">
                             <a href="#" class="link">HOME</a>
                         </li>
-                        <li>
+                        <li class="nav-links">
                             <a href="#" class="link">ABOUT US</a>
                         </li>
-                        <li>
+                        <li class="nav-links">
                             <a href="#" class="link">OUR SERVICES</a>
                         </li>
-                        <li>
+                        <li class="nav-links">
                             <a href="#" class="link">TOUR PACKAGE</a>
                         </li>
-                        <li>
+                        <li class="nav-links">
                             <a href="#" class="link">API</a>
                         </li>
                     </ul>
                 </div>
             </header>
         </div>
-
-        <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
+<!-- header ends here -->
+<!-- carousel code start -->
+    <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active item-1">
-            <img src="images/jens-kreuter-96504-unsplash.png" class="d-block w-100 img-1" alt="gir with hat">
-            <div class="carousel-caption d-none d-md-block">
-                <p>From $199/Person</p>
-                <h2>Discover Grecee</h2>
-                <p>TRAVEL WITH UNIQUE EXPERIENCE</p>
-              </div>
+            <div class="img-gradient">
+            </div>
+            <img src="images/jens-kreuter-96504-unsplash.png" class=" img-1" alt="gir with hat">
+            <img  class="carousel-img" src="images/Layer 2.png" alt="shadow">
+            <div class="carousel-caption">
+                <p class="price">From $199/Person</p>
+                <h2 class="heading">Discover Grecee</h2>
+                <p class="coment">TRAVEL WITH UNIQUE EXPERIENCE</p>
+            </div>
           </div>
           <div class="carousel-item item-1">
-            <img src="images/julia-caesar-15078-unsplash.png" class="d-block w-100 img-1" alt="girl at lake">
-            <div class="carousel-caption d-none d-md-block">
-                <p>From $199/Person</p>
-                <h2>Discover Grecee</h2>
-                <p>TRAVEL WITH UNIQUE EXPERIENCE</p>
-              </div>
+            <img src="images/julia-caesar-15078-unsplash.png" class=" img-1" alt="girl at lake">
+            <img  class="carousel-img" src="images/Layer 2.png" alt="shadow">
+            <div class="carousel-caption">
+                <p class="price">From $199/Person</p>
+                <h2 class="heading">Discover Grecee</h2>
+                <p class="coment">TRAVEL WITH UNIQUE EXPERIENCE</p>
+            </div>
           </div>
           <div class="carousel-item item-1">
-            <img src="images/jakob-owens-208999-unsplash.png" class="d-block w-100 img-1" alt="ocean and girl">
-            <div class="carousel-caption d-none d-md-block">
-                <p>From $199/Person</p>
-                <h2>Discover Grecee</h2>
-                <p>TRAVEL WITH UNIQUE EXPERIENCE</p>
-              </div>
+            <img src="images/jakob-owens-208999-unsplash.png" class="img-1" alt="ocean and girl">
+            <img  class="carousel-img" src="images/Layer 2.png" alt="shadow">
+            <div class="carousel-caption ">
+                <p class="price">From $199/Person</p>
+                <h2 class="heading">Discover Grecee</h2>
+                <p class="coment">TRAVEL WITH UNIQUE EXPERIENCE</p>
+            </div>
           </div>
         </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+        <div class="carousel-bttn">
+            <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+       </div>
+
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
